--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   min-height: 100vh;
   background: #282828;
-background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e) !important;
 }
 
 .clock {
