--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
   height: 350px;
   justify-content: center;
   align-items: center;
-  background: url(http://samuel-garcia.site/img/clock-sam.png);
+  background: url(./clock.png);
   background-size: cover;
   border: 4px solid #191919;
   border-radius: 50%;
