--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
   align-items: center;
   background: url(./clock.png);
   background-size: cover;
-  border: 4px solid #191919;
+  border: 4px solid #0f0f4;
   border-radius: 50%;
   box-shadow: -4px -4px 10px rgba(67, 67, 67, 0.5),
     inset 4px 4px 10px rgba(0, 0, 0, 0.5),
